--- a/app/city-list/city-list.component.html
+++ b/app/city-list/city-list.component.html
@@ -1,12 +1,21 @@
-<div  *ngIf="cityList">
-    <h2>List of Cities</h2>
-    <ul>
-        <li *ngFor = "let city of cityList.cities" (click)="onSelect(city)">
-            <span class="badge">{{city.id}}</span> {{city.name}}
-        </li>
-    </ul>
-    <button [disabled]="isFirstPage()" (click)="getFirstCities()">First Page</button>
-    <button [disabled]="isFirstPage()" (click)="getPrevCities()">Previous</button>
-    <button [disabled]="isLastPage()" (click)="getNextCities()">Next</button>
-    <button [disabled]="isLastPage()" (click)="getLastCities()">Last</button>
+<div *ngIf="cityList" class="panel panel-default">
+    <div class="panel-heading">
+        <h3 class="panel-title">
+            City List
+        </h3>
+    </div>
+    <div class="panel-body">
+        <ul class="cities">
+            <li *ngFor = "let city of cityList.cities" (click)="onSelect(city)"
+             [class.selected]="city === selectedCity">
+                <span class="badge">{{city.id}}</span> {{city.name}}
+            </li>
+        </ul>
+    </div>
+    <div class="panel-footer">
+        <button [disabled]="isFirstPage()" (click)="getFirstCities()">First Page</button>
+        <button [disabled]="isFirstPage()" (click)="getPrevCities()">Previous</button>
+        <button [disabled]="isLastPage()" (click)="getNextCities()">Next</button>
+        <button [disabled]="isLastPage()" (click)="getLastCities()">Last</button>
+    </div>
 </div>
