--- a/app/city-list/city-list.component.html
+++ b/app/city-list/city-list.component.html
@@ -2,6 +2,7 @@
     <div class="panel-heading">
         <h3 class="panel-title">
             City List
+            <input #searchBox id="search-box" (keyup)="search(searchBox.value)" />
             <div class="rightaligned"><label>Delay:</label><input [(ngModel)]="delayInSecs" placeholder="delay"/></div>
         </h3>
         
