Added Country Detail

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -10,23 +10,11 @@
 	</div>
 	<div class="row">
 		<div class="col-md-6">
-			<city-list [cityList]="cityList" (cityChange)="selectedCityChange($event)"></city-list>
+			<city-list [cityList]="cityList" [selectedCity]="selectedCity"(cityChange)="selectedCityChange($event)"></city-list>
 		</div>
 		<div class="col-md-6">
             <city-detail [city]="selectedCity"></city-detail>
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h3 class="panel-title">
-						Heading
-					</h3>
-				</div>
-				<div class="panel-body">
-					Country Detail Here
-				</div>
-				<div class="panel-footer">
-					Some buttons for async behaviour here
-				</div>
-			</div>
+			<country-detail [country]="selectedCityCountry" [capitalCity]="selectedCityCountryCapital"></country-detail> 
 		</div>
 	</div>
 	<div class="row">
