--- a/app/city-list/city-list.component.html
+++ b/app/city-list/city-list.component.html
@@ -3,7 +3,10 @@
         <h3 class="panel-title">
             City List
             <input #searchBox id="search-box" (keyup)="search(searchBox.value)" />
-            <div class="rightaligned"><label>Delay:</label><input ng-pattern="\d*" [(ngModel)]="delayInSecs" placeholder="delay"/></div>
+            <div class="rightaligned">
+                <label>Delay:</label>
+                <input #delayBox ng-pattern="\d*" placeholder="0" (keyup)="processDelay(delayBox.value)"/>
+            </div>
         </h3>
         
     </div>
