--- a/app/city-detail/city-detail.component.html
+++ b/app/city-detail/city-detail.component.html
@@ -14,6 +14,6 @@
         <input [(ngModel)]="city.population" placeholder="population"/>
     </div>
     <div class="panel-footer">
-        <button>Save Changes</button>
+        <button (click)="updateCity()">Save Changes</button>
     </div>
 </div>
